# anima-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  pyproject.toml  requirements-dev.txt  requirements-pi.txt  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: elixir-broker.yml  test.yml
anima_broker/: .gitignore  README.md  mix.exs
anima_broker/config/: config.exs  runtime.exs
anima_broker/systemd/: anima-broker-ex.service
config/: anima-creature.service  anima.env.example
docs/: CONTROL_CENTER.md  architecture.html  control_center.html  developer-index.md  index.md
docs/guides/: LUMEN_QA_ANSWER_DRAFTS.md  QUICK_REFERENCE.md  RESONANCE_CRITIQUE_LOOP.md
docs/operations/: BACKUP_AND_RESTORE.md  PI_DEPLOYMENT.md
docs/plans/: 2026-02-22-schema-hub-design.md  2026-02-22-schema-hub-implementation.md  2026-04-17-unitares-decoupling-pointer.md  2026-06-29-elixir-broker-migration.md  2026-07-01-phase2-governance-seam-addendum.md
docs/proposals/: hearing-wire.md
scripts/: anima-watchdog.sh  auto_restore.sh  backup_db.sh  db_maintenance.sh  mcp_noauth_proxy.py  message_server.py  pi_monitor.py  restore_lumen.sh  setup_tailscale_via_http.sh  tcp_proxy.py  update_pi_ip.sh
scripts/dev/: ship.sh
scripts/ops/: answer_lumen_questions.py
src/anima_mcp/: adaptive_prediction.py  admin_auth.py  agency.py  anima.py  anima_history.py  atomic_write.py  eisv_mapper.py  experiential_filter.py  hearing_ingest.py  input_handler.py  knowledge.py  lifecycle.py  loop_phases.py  mcp_patches.py  messages.py  metacognition.py  oauth_provider.py  primitive_language.py  rest_api.py  schema_hub.py  self_model.py  self_reflection.py  server.py  server_context.py  server_state.py  stable_creature.py  tool_registry.py  trajectory.py  unitares_bridge.py  vigil_checks.py  (+1 more)
systemd/: anima-broker.service  anima.service
tests/: test_accessors.py  test_admin_auth.py  test_agency.py  test_anima_watchdog_script.py  test_atomic_write.py  test_audio.py  test_brainhat_display_callback.py  test_brainhat_input_heartbeat.py  test_communication_handlers_extended.py  test_db_maintenance_script.py  test_delayed_restart_taskref.py  test_display_chip_state.py  test_drawing_earned_completion.py  test_drawing_eisv.py  test_drawing_engine.py  test_eisv_awareness.py  test_eisv_mapper.py  test_eisv_mapper_extended.py  test_era_registry.py  test_experiential_filter.py  test_experiential_integration.py  test_expression.py  test_gestural_era.py  test_growth_goals.py  test_growth_migrations.py  test_handlers_smoke.py  test_hearing_ingest.py  test_identity_store.py  test_knowledge_base.py  test_knowledge_extended.py  test_knowledge_handlers_extended.py  test_loop_phases.py  test_mark_quality.py  test_mcp_noauth_proxy.py  test_mcp_patches.py  test_memory_consolidation.py  test_messages.py  test_messages_extended.py  test_metacognition.py  test_next_steps_advocate.py  (+28 more)
(+52 files in other folders)
